# machine-learning

./: 1. Fundamentos de Machine Learning.ipynb  1. [ALUM]Fundamentos de Machine Learning.ipynb  2. Métricas.ipynb  2. [ALUM]Métricas.ipynb  2.1. Ayuda para la práctica - estudio completo.ipynb  3. Árboles de decisión.ipynb  3. [ALUM]Árboles de decisión.ipynb  4. Bagging y Random Forest.ipynb  4. [ALUM]Bagging y Random Forest.ipynb  4.1. Boosted Trees.ipynb  4.1. [ALUM]Boosted Trees.ipynb  4.2. Boosting - Otras implementaciones.ipynb  5. Casos prácticos.ipynb  5. [ALUM]Casos prácticos.ipynb  6. [COLAB] Adversarial Attacks.ipynb  README.md  pyproject.toml
Introduction/1_Numpy/: Introduccion_numpy_spain.ipynb
Introduction/2_Pandas/: Introduccion_pandas_spain.ipynb  automobile.csv
Introduction/3_Exploratory_data_analysis/: Exploratory_data_analysis.ipynb
Introduction/4_Preprocessing/: Preprocessing_data.ipynb
data/: king_county_test.csv  king_county_train.csv  spam.csv  spam_realWorld.csv
