[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "jupyterlab==4.0.10",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "scikit-learn==1.4.2",
    "seaborn==0.13.1",
]
